[gd_scene load_steps=2 format=3 uid="uid://d2pvo68ddm58u"]

[ext_resource type="Script" path="res://ClumpingTest/clumping_test.gd" id="1_1ogr6"]

[node name="ClumpingTest" type="Node2D"]
script = ExtResource("1_1ogr6")

[node name="PointRect" type="ReferenceRect" parent="."]
unique_name_in_owner = true
offset_left = 51.0
offset_top = 79.0
offset_right = 451.0
offset_bottom = 479.0
border_color = Color(0.310516, 0.599724, 1, 1)
editor_only = false

[node name="RandomizeButton" type="Button" parent="PointRect"]
unique_name_in_owner = true
offset_left = 419.0
offset_top = -2.0
offset_right = 538.0
offset_bottom = 31.0
text = "Randomize"

[node name="HBoxContainer" type="HBoxContainer" parent="PointRect"]
layout_mode = 0
offset_left = 419.0
offset_top = 40.0
offset_right = 622.0
offset_bottom = 80.0

[node name="CountSlider" type="HSlider" parent="PointRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 200.0
value = 20.0

[node name="CountLabel" type="Label" parent="PointRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "100 Points"
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 8.0
offset_right = 281.0
offset_bottom = 43.0
text = "Point Clumping Algorithm Tests"
